.provarCaches/00D6C0000000xA6UAI/objects/sked__Client_Availability__c.object
<CustomObject>
    <fields>
        <fullName>sked__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Client Availabilities</relationshipLabel>
        <relationshipName>Client_Availabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Client Availabilities</relationshipLabel>
        <relationshipName>Client_Availabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__End__c</fullName>
        <label>End</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__Is_Available__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sked__Preferred_End__c</fullName>
        <description>The preferred End of appointment within the availability window</description>
        <label>Preferred End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__Preferred_Start__c</fullName>
        <description>The preferred Start of appointment within the availability window</description>
        <label>Preferred Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sked__Recurring_Schedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Recurring Schedule</label>
        <referenceTo>sked__Recurring_Schedule__c</referenceTo>
        <relationshipLabel>Client Availabilities</relationshipLabel>
        <relationshipName>Client_Availabilities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sked__Start__c</fullName>
        <label>Start</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <label>Client Availability</label>
    <nameField>
        <displayFormat>CA-{0000}</displayFormat>
        <label>Client Availability Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Client Availabilities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>sked__Must_have_either_Account_or_Contact</fullName>
        <active>true</active>
        <description>Account and Contact fields must not both be empty</description>
        <errorConditionFormula>AND( ISBLANK( sked__Account__c ) , ISBLANK( sked__Contact__c ) )</errorConditionFormula>
        <errorMessage>Account and Contact fields must not both be empty</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__Preferred_End_within_avail_window</fullName>
        <active>true</active>
        <description>If IsAvailable, the end of the preferred time window must be &gt; Start and &lt;= End</description>
        <errorConditionFormula>AND( sked__Is_Available__c , NOT( ISBLANK( sked__Preferred_End__c ) ) , OR( sked__Preferred_End__c &lt;= sked__Start__c , sked__Preferred_End__c &gt; sked__End__c ) )</errorConditionFormula>
        <errorDisplayField>sked__Preferred_End__c</errorDisplayField>
        <errorMessage>If IsAvailable, the end of the preferred time window must be &gt; Start and &lt;= End</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__Preferred_Start_within_avail_window</fullName>
        <active>true</active>
        <description>If IsAvailable, the start of the preferred time window must be &gt;= Start and &lt; End</description>
        <errorConditionFormula>AND( sked__Is_Available__c , NOT( ISBLANK( sked__Preferred_Start__c ) ) , OR( sked__Preferred_Start__c  &lt;  sked__Start__c , sked__Preferred_Start__c  &gt;=  sked__End__c ) )</errorConditionFormula>
        <errorDisplayField>sked__Preferred_Start__c</errorDisplayField>
        <errorMessage>If IsAvailable, the start of the preferred time window must be &gt;= Start and &lt; End</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__Start_must_be_before_End</fullName>
        <active>true</active>
        <errorConditionFormula>sked__Start__c  &gt;=  sked__End__c</errorConditionFormula>
        <errorMessage>Start must be before End</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>sked__Start_must_be_before_End_preferred</fullName>
        <active>true</active>
        <errorConditionFormula>AND( NOT( ISBLANK(sked__Preferred_Start__c) ) , NOT( ISBLANK(sked__Preferred_End__c) ) , sked__Preferred_Start__c  &gt;=  sked__Preferred_End__c )</errorConditionFormula>
        <errorMessage>Preferred Start must be before Preferred End</errorMessage>
    </validationRules>
</CustomObject>